# Telegramm-saler-bot

./: .gitignore  MANIFEST.in  README.md  dodo.py  install.sh  pyproject.toml  setup.cfg  start.sh  test.py  tgsaler.pot
data/photos/: description.txt
data/scripts/: description.txt
docs/source/: bd_console.rst  bd_worker.rst  conf.py  index.rst  setuper.rst  tgsaler.rst
environment/: Pipfile  Pipfile.orig
for_installation/: create_service_file.sh
tgsaler/: __init__.py  __main__.py  bd_console.py  bd_creator.py  bd_worker.py  config_creator.py  functionals.py  setup.cfg
tgsaler/bd_console/: __init__.py  __main__.py
tgsaler/setuper/: __main__.py  bd_creator.py  config_creator.py
tgsaler/translations/ru/LC_MESSAGES/: tgsaler.mo  tgsaler.po
