[project]
name = "tgsaler"
version = "1.0"
description = "Telegram bot shop"
authors = [
    { name = "SannTim", email = "timohaj1@yandex.ru" },
	{ name = "Mark", email = "pochtamarka@clown.ru"},
	{ name = "Masha", email = "masha.burdugova@mail.ru"}
]
readme = "README.md"
keywords = ["telegram", "bot", "shop"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "setuptools",
    "psycopg2",
	"pyTelegramBotAPI"
]
[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tgsaler", "tgsaler.bd_console"]
include-package-data = true
package-dir = {"tgsaler" = "tgsaler"}

[tool.setuptools.package-data]
"tgsaler" = ["**"]

[project.scripts]
tgsalerconfig = "tgsaler.config_creator:create_config"
tgsalercrdb = "tgsaler.bd_creator:create_db"
tgsaler = "tgsaler.__main__:start_main"

