[project]
name = "tgsaler"
version = "1.0"
description = "Telegram bot shop"
authors = [
    { name = "SannTim", email = "timohaj1@yandex.ru" },
	{ name = "Mark", email = "pochtamarka@clown.ru"},
	{ name = "Masha", email = "masha.burdugova@mail.ru"}
]
readme = "README.md"
keywords = ["telegram", "bot", "shop"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "setuptools",
    "psycopg2",
	"pyTelegramBotAPI",
    "prettytable"
]
[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tgsaler", "tgsaler.bd_console", "tgsalersetuper"]
include-package-data = true
package-dir = {"tgsaler" = "tgsaler","tgsalersetuper" = "tgsaler/setuper"}

[tool.setuptools.package-data]
"tgsaler" = ["**"]

[project.scripts]
tgsalersetup = "tgsaler.setuper.config_creator.__main__:start_main"
tgsalerconfig = "tgsaler.setuper.config_creator:create_config"
tgsalercrdb = "tgsaler.setuper.bd_creator:create_db"
tgsaler = "tgsaler.__main__:start_main"
tgsalerconsole = "tgsaler.bd_console.__main__:run_main"

